fix(scroll): incorrect extra content z-index

--- a/style/scroll.scss
+++ b/style/scroll.scss
@@ -65,6 +65,11 @@ $scroll: map.merge(
     left: 0;
     width: 100%;
     height: 100%;
+
+    & > * {
+      position: relative;
+      z-index: 10;
+    }
   }
 
   &--both > &__bar--horizontal {
